removed user-select on starfield modal, was causing some issues on mobile

--- a/src/styles/Starfield.scss
+++ b/src/styles/Starfield.scss
@@ -204,6 +204,7 @@
             line-height: 1.25;
             padding-left: 10px;
             padding-right: 25px;
+            user-select: none;
 
             @media screen and (max-width: $break-720) {
               font-size: 1.1rem;
